<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chatFragment">

    <fragment
        android:id="@+id/chatFragment"
        android:name="by.startandroid.communicationappdemo.ui.chat.ChatFragment"
        android:label="@string/fragment_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/signInFragment"
        android:name="by.startandroid.communicationappdemo.ui.signin.SignInFragment"
        android:label="@string/fragment_signIn"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/dialogFragment"
        android:name="by.startandroid.communicationappdemo.ui.chat.dialog.DialogFragment"
        android:label="@string/fragment_dialog"
        tools:layout="@layout/fragment_dialog" />

    <fragment
        android:id="@+id/userPageFragment"
        android:name="by.startandroid.communicationappdemo.ui.userpage.UserPageFragment"
        android:label="@string/fragment_page"
        tools:layout="@layout/fragment_user_page" />

</navigation>