<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.ChatFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightGray"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_10">

        <ImageView
            android:id="@+id/addImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            ads:srcCompat="@drawable/outline_add_photo_alternate_24"
            android:contentDescription="@string/add_image" />

        <EditText
            android:id="@+id/addMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/text_margin_10"
            android:layout_gravity="center"
            android:padding="@dimen/padding_10"
            android:background="@drawable/edit_text_shadow"
            android:inputType="text"
            android:hint="@string/message_hint"
            android:autofillHints="@string/message_hint" />

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:src="@drawable/outline_send_gray_24"
            android:contentDescription="@string/send" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:background="@android:color/white"
        android:paddingHorizontal="@dimen/padding_16" />

</RelativeLayout>